@@ -2329,10 +2329,25 @@ applet_pre_keyring_callback (gpointer user_data)
 {
 	NMApplet *applet = NM_APPLET (user_data);
 
-	if (applet->menu) {
+	if (applet->menu && applet->menu->window) {
+		GdkScreen *screen;
+		GdkDisplay *display;
+
+		screen = gdk_drawable_get_screen (applet->menu->window);
+		display = gdk_screen_get_display (screen);
+		g_object_ref (display);
+
 		gtk_widget_hide (applet->menu);
 		gtk_widget_destroy (applet->menu);
 		applet->menu = NULL;
+
+		/* Ensure that the widget really gets destroyed before letting the
+		 * keyring calls happen; if the X events haven't all gone through when
+		 * the keyring dialog comes up, then the menu will actually still have
+		 * the screen grab even after we've called gtk_widget_destroy().
+		 */
+		gdk_display_sync (display);
+		g_object_unref (display);
 	}
 }
 
