@@ -1,5 +1,11 @@
 2008-12-09  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.c
+		- (applet_pre_keyring_callback): ensure that the menu is actually
+			destroyed before letting the keyring calls happen
+
+2008-12-09  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/ip4-routes-dialog.c
 		- (ip4_routes_dialog_new, ip4_routes_dialog_update_setting): get and
 			set never-default accordingly
